[workspace]
members = [
    "crates/core",
    "crates/launchwhitely",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sakshamred"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sakshamred/Meth-v12"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
ulid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio", "time"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
arc-swap = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
rand = "0.8"
regex = "1"
semver = "1"
constant_time_eq = "0.3"
twox-hash = "1"
launchwhitely-core = { version = "0.1.0" }
