[package]
name = "launchwhitely-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core evaluation engine for LaunchWhitely — pure, no IO, SDK-reusable"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
twox-hash = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
